# t

./: .tpm
cpp-cli/: .tpm  CMakeLists.txt
cpp-cli/scripts/: build.bat  run.bat
cpp-cli/src/: demo.cpp  demo.h  main.cpp
go-cli/: go.mod  go.sum  main.go  main_test.go
go-cli/scripts/: build.sh  run.sh  test.sh
go-cli/util/: util.go
rust-cli/: .tpm  Cargo.toml
rust-cli/debug/: windows.bat
rust-cli/scripts/: test.sh
rust-cli/src/: lib.rs  log.yaml  main.rs  util.rs
ts-cli/: .eslintrc.js  .nycrc  cspell.json  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
ts-cli/src/: main.ts
ts-cli/tests/: lib.test.ts
