[package]
name = "_t_name_t_"
version = "0.1.0"
authors = ["woodgear <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
backtrace = "0.3.46"
saber-tools = { git = "https://github.com/woodgear/saber-tools.git" }
serde = { version = "1.0", features = ["derive"] }
sugar = { git = "https://github.com/harryfei/sugar-rs.git" }
context-attribute = { git = "https://github.com/woodgear/context-attribute" ,branch="feature/custom-msg"}

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy"]